style.css
@font-face {
    font-family: 'kingthings';
    src: url('/fonts/Kingthings\ Foundation.ttf') format('truetype');
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    height: 100vh;
    margin: 0;
    font-family: 'kingthings', sans-serif;
    font-weight: 700;
    background:
        /* top, transparent black, faked with gradient */
        linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)),
        /* bottom, image */
        url('img/backgrounds/game_background_0.png');
}

h1 {
    font-size: 80px;
    letter-spacing: 3px;
    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
    color: #a0220a;
    -webkit-text-stroke: .5px black;
}

::-webkit-scrollbar {
    display: none;
}

canvas {
    background-color: black;
    display: block;
    border-radius: 20px;
    box-shadow: 0 2px 5px 5px rgba(0, 0, 0, 0.4);
}

.d-none {
    display: none !important;
}

.rotate {
    display: none;
}

/* overlays */

.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    border-radius: 20px;
    z-index: 999;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

#overlayLose {
    background:
        /* top, transparent black, faked with gradient */
        linear-gradient(rgba(0, 0, 0, 0.3),
            rgba(0, 0, 0, 0.7)),
        /* bottom, image */
        url('img/gameOver.png');
    background-position: top;
    background-size: cover;
}

.overlayEnd {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
}

.replay {
    position: unset !important;
    width: 150px !important;
    height: 60px !important;
    border-radius: 20px !important;
    font-size: 25px;
}

.overlay h2 {
    font-size: 150px;
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;
    -webkit-text-stroke: .5px black;
    margin: 0;
}

#overlayLose h2 {
    background-image: linear-gradient(to bottom, red, #8B0000);
}

#overlayWin h2 {
    background-image: linear-gradient(to bottom, rgb(255, 235, 124), gold);
}

.chooseHero {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-image: url('img/backgrounds/PNG/PNG/game_background_3/game_background_3(3).png');
    background-size: cover;
    display: flex;
    flex-direction: column;
}

.chooseHero h2 {
    background-image: linear-gradient(to bottom, rgb(255, 235, 124), gold);
    font-size: 80px;
    margin-top: 50px;
}

.heros {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    width: 100%;
}

.heros h3 {
    font-size: 30px;
    padding: 10px 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 20px;
    background: linear-gradient(to bottom, rgb(165, 165, 165), rgb(97, 97, 97));
    border: 2px solid black;
    transition: 200ms;
    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
}

.hero {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.hero img {
    height: 300px;
    filter: drop-shadow(0px 0px 10px grey);
    transition: 225ms;
}

#hero0 {
    filter: drop-shadow(0px 0px 10px rgb(170, 157, 84));
}

.hero img:hover {
    filter: drop-shadow(0px 0px 15px white);
    transform: scale(1.1);
    cursor: pointer;
    transition: 225ms;
}

#hero1:hover {
    content: url("img/characters/Knight_1/Slashing/Slashing_011.png");
}

#hero2:hover {
    content: url("img/characters/Knight_2/Slashing/Slashing_011.png");
}

#hero3:hover {
    content: url("img/characters/Knight_3/Slashing/Slashing_011.png");
}

#hero0:hover {
    content: url("img/characters/Knight_0/Slashing/Slashing_011.png");
    filter: drop-shadow(0px 0px 15px rgb(255, 228, 77));
}

/*  */

.container {
    position: relative;
}

.button {
    position: absolute;
    top: 15px;
    height: 50px;
    width: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 100%;
    background: linear-gradient(to bottom, rgb(165, 165, 165), rgb(97, 97, 97));
    border: 2px solid black;
    transition: 200ms;
    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
}

.button img {
    height: 30px;
    width: 30px;
}

.button:hover {
    cursor: pointer;
    transform: scale(1.1);
    transition: 200ms;
}

#fullscreen {
    right: 15px;
}

#sound {
    right: 84px;
}

#menu {
    right: 153px;
}

#startGame {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 100px;
    width: 100px;
}

#playPause {
    right: 222px;
}

#startGame img {
    margin-left: 8px;
    height: 40px;
    width: 40px;
}

#startGame:hover {
    transform: translate(-50%, -50%) scale(1.1);
}

/* Settings Menu */
h2 {
    text-align: center;
}

.settingsMenu {
    position: absolute;
    right: 15px;
    top: 80px;
    width: 256px;
    border-radius: 16px;
    border: 2px solid black;
    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
    background: linear-gradient(to top, rgba(211, 211, 211, 0.5), rgba(128, 128, 128, 0.493));
    backdrop-filter: blur(4px);
    overflow-y: scroll;
}

.openSettings {
    animation: open 1s forwards;
}

.closeSettings {
    animation: close 1s forwards;
}

@keyframes open {
    100% {
        height: 360px;
        padding-bottom: 20px;
    }

    0% {
        height: 0;
    }
}

@keyframes close {
    0% {
        height: 360px;
    }

    100% {
        height: 0;
        padding-bottom: 0px;
    }
}

.controls {
    display: flex;
    justify-content: space-evenly;
}

.settingsMenu p {
    display: flex;
    justify-content: center;
    padding: 2px 4px;
    margin: 2px;
}

#text {
    margin-top: 20px;
    text-align: center;
}

.left,
.right {
    display: flex;
    flex-direction: column;
}

.left p {
    border: 2px solid black;
    border-radius: 5px;
    background-color: rgb(163, 163, 163);
}

.right p {
    border: 2px solid transparent;
}

.settings {
    display: flex;
    flex-direction: column;
    text-align: center;
}

.blood {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

#bloodEnable {
    height: 20px;
    width: 20px;
    background-color: lightgrey;
    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.5);
    border: 2px solid black;
    border-radius: 16px;
    transition: 225ms;
}

.credits {
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 0 32px;
    text-align: center;
}

/* status bars */
.status {
    position: absolute;
    top: 15px;
    left: 15px;
    height: 50px;
    padding: 0 12px;
    display: flex;
    align-items: center;
    gap: 15px;
    border-radius: 25px;
    background: linear-gradient(to bottom, rgb(165, 165, 165), rgb(97, 97, 97));
    border: 2px solid black;
    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
}

.statusBars {
    display: flex;
    flex-direction: column;
}

.barSleeve {
    width: 300px;
    height: 25px;
    border: 1px solid black;
    border-radius: 20px;
    background: linear-gradient(to top, lightgrey, grey);
}

.bar {
    background: linear-gradient(to bottom, rgba(255, 0, 0, 0.568), #8B0000);
    width: 100%;
    height: 100%;
    border-radius: 20px;
    border-right: 1px solid black;
    display: flex;
    align-items: center;
}

.bar span {
    padding-left: 10px;
}

.bombs {
    display: flex;
    align-items: center;
    gap: 10px;
}

.bombs img {
    height: 30px;
    margin-top: -4px;
}

#bombCount,
#shieldCount {
    font-size: 25px;
    color: black;
}

.shield {
    display: flex;
    align-items: center;
    gap: 10px;
}

.shield img {
    height: 40px;
    margin: auto 0;
}

@keyframes fadeRed {
    0% {
        color: black;
    }

    50% {
        color: red;
    }

    100% {
        color: black;
    }
}

.fade-red {
    animation: fadeRed 1s linear;
    animation-fill-mode: forwards;
}

@media(max-width: 1280px) {

    canvas,
    .overlay {
        width: 100vw;
        border-radius: 0;
    }
}

@media(max-width: 660px) {
    canvas {
        display: none;
    }

    h1 {
        display: none;
    }

    .rotate {
        display: flex;
        flex-direction: column;
        align-items: center;
        background-color: white;
        border-radius: 100%;
        width: 30vw;
        height: 30vw;
        padding: 20px;
    }

    .rotate img {
        height: 50%;
        width: 50%;
    }

    .rotate p {
        font-size: 5vw;
        text-align: center;
        margin: auto 0;
    }
}

@media(max-height: 720px) {
    canvas {
        height: 100vh;
    }
}

@media(max-height: 820px) {
    h1 {
        display: none;
    }
}

